--- a/templates/base.html
+++ b/templates/base.html
@@ -104,6 +104,6 @@
     </div>
     {% block pagination %}{% endblock %}
   {% block comment %}{% endblock %}
-  
+  {% block script %}{% endblock %}
   </body>
 </html>
