--- a/templates/blog/blog_detail.html
+++ b/templates/blog/blog_detail.html
@@ -2,7 +2,6 @@
 {% block title %}Blog Details{% endblock %}
 {% block colume_name %}博客详情{% endblock %}
 {% block colume1 %}
-<!-- <h3>{{ blog.title }}</h3> -->
 <h3>{{ blog.title }}<span class="label label-default">New</span></h3>
 <p>作者： {{ blog.author }} </p>
 <p>发表日期：{{ blog.created_time|date:"Y-m-d G:n:s" }}</p>
@@ -45,10 +44,6 @@
             <form id='comments_form' action="{% url 'update_comment' %}" method="POST">
                 {% csrf_token %}
                 {{ comments_form }}
-                <!-- {{ reply_comment_id }} -->
-                <!-- <textarea name="text" cols="160" rows="10"></textarea> -->
-                <!-- <input type="hidden" name="object_id" value="{{ blog.id }}"> -->
-                <!-- <input type="hidden" name="content_type" value="blog"> -->
                 <input type="submit" value="提交">
             </form>
             {% else %}
@@ -69,12 +64,14 @@
                         {{ blog.user }}<br>
                         {{ comment.created_time }}<br>
                         {{ comment.text | safe }}
+                        <a href="javascript:reply({{ comment.id }})">回复</a>
                         {% for reply in comment.root_comment.all %}
                             <div class="reply">
                                 {{ reply.user.usernaem }}
                                 {{ reply.created_time }}
                                 回复
                                 {{ reply.text }}
+                                <a href="javascript:reply({{ comment.id }})">回复</a>
                             </div>
                         {% endfor %}
                     </div>
@@ -89,7 +86,7 @@
 {% block script %}
 <script type="text/javascript">
     $("#comments_form").submit(function () {
-        // event.preventDefault() //阻止form表单默认提交
+        event.preventDefault() //阻止form表单默认提交
         $.ajax({
             url: "{% url 'update_comment' %}",
             type: "POST",
@@ -108,6 +105,12 @@
                 console.log(xhr);
             }
         })
-    })
+    });
+    function reply (reply_comment_id) {
+        $('#reply_comment_id').val(reply_comment_id);
+        $('html').animate({scrollTop: $('#comments_form').offset().top - 60}, 300, function(){
+                $('#id_text').focus();
+            });
+    }
 </script>
 {% endblock %}
