--- a/templates/update_email.html
+++ b/templates/update_email.html
@@ -5,7 +5,7 @@
 {% block content %}
 <form action="#" method="POST">
     {% csrf_token %}
-    {{ login_form }}
-    <input type="submit" value="登录">
+    {{ email_form }}
+    <input type="submit" value="更新">
 </form>
 {% endblock %}
