--- a/templates/blog/results.html
+++ b/templates/blog/results.html
@@ -3,7 +3,7 @@
 {% block title %}Blogs{% endblock %}
 {% block colume_name %}博客列表{% endblock %}
 {% block colume1 %}
-    {% for blog in page_blogs %}
+    {% for blog in page_result %}
     <a href="{% url 'blog_detail' blog.id %}"><h3>{{ blog.title }}</h3></a>
     <hr>
     <p class="lead"><a href="{% url 'blog_detail' blog.id %}">{{ blog.content|striptags|truncatechars:30 }}</a></p>
@@ -22,19 +22,19 @@
 {% block pagination %}
 <nav aria-label="Page navigation">
     <ul class="pagination">
-      <li><a href="?page={{ previous_page }}" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
+      <li><a href="?wd={{ search_wd }}&page={{ previous_page }}" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
       <li><a href="?page=1" aria-label="Previous"><span aria-hidden="true">第一页</span></a></li></li>
       <li ><span aria-hidden="true">&nbsp;</span></li>
       {% for page in current_page_list %}
         {% if page_blogs.number == page %}
           <li class="active"><span>{{ page }}</span></a></li>
         {% else %}
-          <li><a href="?page={{ page }}" aria-label="Previous">{{ page }}</a></li>
+          <li><a href="?wd={{ search_wd }}&page={{ page }}" aria-label="Previous">{{ page }}</a></li>
         {% endif %}
       {% endfor %}
       <li><span aria-hidden="true">&nbsp;</span></li>
-      <li><a href="?page={{ all_page_num }}" aria-label="Previous"><span aria-hidden="true">最后一页</span></a></li></li>
-      <li><a href="?page={{ next_page }}" aria-label="Next"><span aria-hidden="true">&raquo;</span></a></li>
+      <li><a href="?wd={{ search_wd }}&page={{ all_page_num }}" aria-label="Previous"><span aria-hidden="true">最后一页</span></a></li></li>
+      <li><a href="?wd={{ search_wd }}&page={{ next_page }}" aria-label="Next"><span aria-hidden="true">&raquo;</span></a></li>
     </ul>
   </nav>
-  {% endblock %}  
+  {% endblock %}
