--- a/templates/base.html
+++ b/templates/base.html
@@ -55,11 +55,13 @@
                 </ul>
               </li> -->
         </ul>
-        <form class="navbar-form navbar-left">
+        <form class="navbar-form navbar-left" action="{% url 'search' %}">
           <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search">
+            <input type="text" name="wd" class="form-control" placeholder="Search">
           </div>
-          <button type="submit" class="btn btn-default">提交</button>
+          <button type="submit" class="btn btn-default">
+            <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+          </button>
         </form>
         <ul class="nav navbar-nav navbar-right">
           {% if not user.is_authenticated %}
