--- a/templates/base0.html
+++ b/templates/base0.html
@@ -55,16 +55,18 @@
                 </ul>
               </li> -->
         </ul>
-        <form class="navbar-form navbar-left">
+        <form class="navbar-form navbar-left" action="{% url 'search' %}">
           <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search">
+            <input type="text" name="wd" class="form-control" placeholder="Search">
           </div>
-          <button type="submit" class="btn btn-default">提交</button>
+          <button type="submit" class="btn btn-default">
+            <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+          </button>
         </form>
         <ul class="nav navbar-nav navbar-right">
           {% if not user.is_authenticated %}
-          <li><a href="{% url 'login' %}?from={{ request.get_full_path }}">登录</a></li>
-          <li><a href="{% url 'register' %}?from={{ request.get_full_path }}">注册</a></li>
+          <li><a href="{% url 'login' %}?from={{ request.path|safe }}">登录</a></li>
+          <li><a href="{% url 'register' %}?from={{ request.path|safe }}">注册</a></li>
           {% else %}
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
@@ -87,7 +89,7 @@
 
   {% block content %}{% endblock %}
 
- 
+
   {% block pagination %}{% endblock %}
   {% block comment %}{% endblock %}
   {% block script %}{% endblock %}
