--- a/templates/user_info.html
+++ b/templates/user_info.html
@@ -7,11 +7,10 @@
 {{ user.username }} 邮箱： 
 {{ user.email }} {% if user.email %} <a href="{% url 'update_email' %}?from={{ request.get_full_path }}">更改</a>{% else %} 邮箱未
 <a href="{% url 'update_email' %}?from={{ request.get_full_path }}">绑定</a> {% endif %}
-
 {% else %}
-<a href="{% url 'login' %}?from={{ request.get_full_path }}">登录</a>
+<a href="{% url 'login' %}?from={{ request.path }}">登录</a>
 <span>or</span>
-<a href="{% url 'register' %}?from={{ request.get_full_path }}">注册</a>
+<a href="{% url 'register' %}?from={{ request.path }}">注册</a>
 {{ requests.get_full_path }}
 {% endif %}
 {% endblock %}
