--- a/templates/blog/results.html
+++ b/templates/blog/results.html
@@ -28,7 +28,7 @@
 <nav aria-label="Page navigation" style="text-align: center;">
     <ul class="pagination">
       <li><a href="?wd={{ search_wd }}&page={{ previous_page }}" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
-      <li><a href="?page=1" aria-label="Previous"><span aria-hidden="true">第一页</span></a></li></li>
+      <li><a href="?wd={{ search_wd }}&page=1" aria-label="Previous"><span aria-hidden="true">d第一页</span></a></li></li>
       <li ><span aria-hidden="true">&nbsp;</span></li>
       {% for page in current_page_list %}
         {% if page_blogs.number == page %}
