--- a/templates/base.html
+++ b/templates/base.html
@@ -51,9 +51,9 @@
                 </ul>
               </li> -->
         </ul>
-        <form class="navbar-form navbar-left" action="{% url 'search' %}">
+        <form class="navbar-form navbar-left" method='get' action="/search/" target="_blank">
           <div class="form-group">
-            <input type="text" name="wd" class="form-control" placeholder="Search">
+            <input type="text" name="q" class="form-control" placeholder="Search">
           </div>
           <button type="submit" class="btn btn-default">
             <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
