--- a/templates/blog/error.html
+++ b/templates/blog/error.html
@@ -9,7 +9,7 @@
 
 <body>
     <h2>
-        <a href="{% url 'login' %}">error:{{ massage }}</a>
+        <a href=" {{ referer_to }}">error:{{ massage }}</a>
     </h2>
 </body>
 
