--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
 </head>
 <body>
   <nav class="navbar navbar-default">
-    <div class="container-fluid">
+    <div class="container-fluid" style="margin:0px 25px 0px 25px;">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
@@ -81,12 +81,12 @@
   {% block home %}{% endblock %}
   {% block content %}{% endblock %}
   {% block lift_colume %}
-  <div class="container-fluid"></div>
+  <div class="container-fluid""></div>
   <div class="row">
-    <div class="col-md-8">
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h4 style="margin-left: 100px;margin-right: 100px;">{% block colume_name %}{% endblock %}</h4>
+    <div class="col-md-8" style="border-bottom: 100px;">
+      <div class="panel panel-default" style="margin-left: 100px;">
+        <div class="panel-heading" style="color: black;">
+          <h3 style="margin-left: 100px;margin-right: 100px;">{% block colume_name %}{% endblock %}</h3>
         </div>
         <div class="panel-body">
           {% block colume1 %}{% endblock %}
@@ -107,7 +107,7 @@
     </div>
   </div>
   {% endblock %}
-  {% block pagination %}{% endblock %}
+  <div>{% block pagination %}{% endblock %}</div>
   {% block comment %}{% endblock %}
   {% block script %}{% endblock %}
 </body>
