--- a/templates/base0.html
+++ b/templates/base0.html
@@ -24,7 +24,7 @@
 
 <body>
   <nav class="navbar navbar-default">
-    <div class="container-fluid">
+    <div class="container-fluid" style="margin:0px 25px 0px 25px;">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
