--- a/templates/blog/blog_detail.html
+++ b/templates/blog/blog_detail.html
@@ -3,7 +3,7 @@
 {% block colume_name %}博客详情{% endblock %}
 {% block colume1 %}
 <div style="margin-left: 100px;margin-right: 100px;">
-    <h3>{{ blog.title }}<span class="label label-default">New</span></h3>
+    <h3>{{ blog.title }}</h3>
     <p>作者： {{ blog.author }} </p>
     <p>发表日期：{{ blog.created_time|date:"Y-m-d G:n:s" }}</p>
     <a href="{% url 'blog_type' blog.blog_type.id %}">
@@ -40,7 +40,7 @@
 {% block comment %}
 <div class="row">
     <div>
-        <div style="margin: 2em;border: 1px dashed;padding: 2em;">
+        <div style="margin-left: 15em;border: 0px dashed;padding: 2em;">
             {% if user.is_authenticated %}
             <form id='comments_form' action="{% url 'update_comment' %}" method="POST">
                 {% csrf_token %}
@@ -59,13 +59,13 @@
 <div class="row">
     <div>
         {% if comments %}
-        <div style="margin: 2em;border: 1px dashed;padding: 2em;">
+        <div style="margin-left: 11.5em;margin-right: 350px;border: 0px dashed;padding: 2em;">
             
             <div id='comment_list'>
                 {% for comment in comments %}
                     <ul class="comment">
-                        {{ blog.author }}&nbsp;&nbsp发表于:
-                        {{ comment.created_time }}<br>
+                        <div style="font-size:25px;">{{ blog.author }}</div>&nbsp;&nbsp;
+                        {{ comment.created_time|date:"Y/m/d H:i:s"}}<br>
                         {{ comment.text | safe }}<br>
                         <div style="float:right">
                         <a href="javascript:reply({{ comment.id }})">回复</a>
