--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -17,7 +17,7 @@
 </div>
 {% endblock %}
 
-{% block colume2 %}
+{% block right_colume %}
     <!-- {% for blog in page %}
     <a href="{% url 'blog_type' blog.object.blog_type.id %}"><h4>{{ page.object.blog_type }}</h4></a>
     {% empty %}
