--- a/templates/blog/blog_with_type.html
+++ b/templates/blog/blog_with_type.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Blog Details{% endblock %}
 {% block colume_name %}博客列表{% endblock %}
+<div>
 {% block colume1 %}
 <title>detail</title>
 <div>
@@ -53,3 +54,4 @@
     </ul>
   </nav>
   {% endblock %}
+</div>
